<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:entries="@array/numberButtonsForSettings"
        android:entryValues="@array/numberButtons"
        android:key="prefNumberButtons"
        android:title="@string/numberButtonsTitle"
        android:summary="@string/numberButtonsSummary"
        android:persistent="true"
        android:defaultValue="10"
        />

    <ListPreference
        android:entries="@array/zoomForSettings"
        android:entryValues="@array/zoom"
        android:key="prefTimeLocation"
        android:title="@string/timeLocationTitle"
        android:summary="@string/timeLocationSummary"
        android:persistent="true"
        android:defaultValue="10.0"
        />

</PreferenceScreen>
