<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MapAndPlacesFragment">

    <!-- TODO: Update blank fragment layout -->

        <fragment
            android:id="@+id/fragment"
            android:name="com.example.luismiguel.mymap.MapsActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0"
            android:layout_gravity="bottom"
            android:id="@+id/linearLayoutButtonPlaces">

            <LinearLayout
                android:id="@+id/layoutPlaces1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#009EFF"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:id="@+id/site1"
                    android:text="@string/site1"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#009EFF"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:id="@+id/site2"
                    android:text="@string/site2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/layoutPlaces2">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#009EFF"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:id="@+id/site3"
                    android:text="@string/site3"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#009EFF"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:id="@+id/site4"
                    android:text="@string/site4"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/layoutPlaces3">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#009EFF"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:id="@+id/site5"
                    android:text="@string/site5"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#009EFF"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:id="@+id/site6"
                    android:text="@string/site6"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/layoutPlaces4">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#009EFF"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:id="@+id/site7"
                    android:text="@string/site7"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#009EFF"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:id="@+id/site8"
                    android:text="@string/site8"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/layoutPlaces5">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#009EFF"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:id="@+id/site9"
                    android:text="@string/site9"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#009EFF"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:id="@+id/site10"
                    android:text="@string/site9"/>
            </LinearLayout>
        </LinearLayout>

</LinearLayout>